Вёрстка секции "Узнайте стоимость ремонта"

--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -1,11 +1,12 @@
 // * Максимальная ширина макета
-$container-width: 1700;
+$container-width: 1430;
 
 :root {
 	// * Colors
 	--black-color: #000;
 	--light-color: #fff;
 	--dark-color: #343434;
+	--dark-opacity-color: #3434348a;
 	--bg-color: var(--light-color);
 	--accent-color: #23c7ef;
 	--grey-color: #5e5e5e;
