--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -16,4 +16,5 @@
 // * Main styles
 @import '../components/header/header';
 @import 'chunk/hero';
+@import 'chunk/repair-cost';
 @import 'chunk/footer';
