Вёрстка секции "Вопрос-ответ"

--- a/assets/components/spollers/_spollers.scss
+++ b/assets/components/spollers/_spollers.scss
@@ -1,7 +1,43 @@
 .spollers {
+	overflow-y: auto;
+	margin: 0 auto;
+	padding: 15px 40px 15px 15px;
+	height: 390px;
+	max-width: 1055px;
+	scrollbar-width: auto;
+	scrollbar-color: var(--accent-color) var(--dark-opacity-color);
+
+	&::-webkit-scrollbar {
+		width: 6px;
+	}
+
+	&::-webkit-scrollbar-track {
+		border-radius: 15px;
+		background-color: var(--dark-opacity-color);
+	}
+
+	&::-webkit-scrollbar-thumb {
+		border-radius: 15px;
+		background-color: var(--accent-color);
+	}
+
 	&__item {
-		margin-bottom: 10px;
-		background-color: $black;
+		position: relative;
+		margin-bottom: 25px;
+		border-radius: 15px;
+		box-shadow: 0 0 15px rgb(0 0 0 / 25%);
+		background-color: var(--light-color);
+
+		&::after {
+			content: '';
+			position: absolute;
+			right: 20px;
+			top: 19px;
+			border-radius: 100%;
+			width: 34px;
+			height: 34px;
+			background-color: var(--accent-color);
+		}
 
 		&:last-child {
 			margin-bottom: 0;
@@ -9,33 +45,35 @@
 	}
 
 	&__title {
-		@include adaptive-font(18, 16);
+		@include adaptive-font(20, 14);
 		position: relative;
-		padding: 10px;
+		z-index: 5;
 		width: 100%;
+		font-weight: 600;
+		line-height: 31px;
 		text-align: left;
-		color: $white;
 	}
 
 	&__text {
-		padding: 0 10px 10px;
-		line-height: 130%;
-		color: $white;
+		padding: 0 20px 20px 30px;
+
+		// line-height: 130%;
+		// color: var(--grey-color);
 	}
 
 	&.init .spollers__title {
-		padding: 10px 40px 10px 10px;
+		padding: 20px;
 	}
 
 	&.init .spollers__title::before,
 	&.init .spollers__title::after {
 		content: '';
 		position: absolute;
-		right: 10px;
-		top: 20px;
+		right: 27px;
+		top: 35px;
 		width: 20px;
 		height: 2px;
-		background-color: $white;
+		background-color: var(--light-color);
 		transition: transform 0.3s ease 0s;
 	}
 
