--- a/assets/components/spollers/spollers.html
+++ b/assets/components/spollers/spollers.html
@@ -1,35 +1,93 @@
 <div class="spollers" data-spollers data-one-spoller>
 	<div class="spollers__item">
-		<button class="spollers__title btn-reset" type="button" tabindex="-1" data-spoller ><span>Обычный спойлер
-				№1</span></button>
-		<div class="spollers__text">
-			Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas hic numquam magni. Nulla, laborum illo enim qui
-			eum architecto soluta, quos provident natus nobis a et aspernatur, labore fuga aliquam!
+		<button class="spollers__title btn-reset" type="button" tabindex="-1" data-spoller>
+			<span>Ваша компания работает по договору?</span>
+		</button>
+		<div class="spollers__text text">
+			Фирма заключает договор с заказчиком, в документе указана цена строительных работ, скидка.
+			Сколько стоит ремонт, все точно указано, а изменение цен – исключено. В договоре написано
+			число дней. Каждый этап работы осуществляем качественно и быстро. После заключения договора
+			приступим к выполнению заказа.
 		</div>
 	</div>
 	<div class="spollers__item">
-		<button class="spollers__title btn-reset" type="button" tabindex="-1" data-spoller >Обычный спойлер №2</button>
-		<div class="spollers__text">
-			Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas hic numquam magni. Nulla, laborum illo enim qui
-			eum architecto soluta, quos provident natus nobis a et aspernatur, labore fuga aliquam!
+		<button class="spollers__title btn-reset" type="button" tabindex="-1" data-spoller>
+			<span>Как внести оплату за ремонт?</span>
+		</button>
+		<div class="spollers__text text">
+			Фирма заключает договор с заказчиком, в документе указана цена строительных работ, скидка.
+			Сколько стоит ремонт, все точно указано, а изменение цен – исключено. В договоре написано
+			число дней. Каждый этап работы осуществляем качественно и быстро. После заключения договора
+			приступим к выполнению заказа.
 		</div>
 	</div>
 	<div class="spollers__item">
-		<button class="spollers__title btn-reset" type="button" tabindex="-1" data-spoller >Обычный спойлер №3</button>
-		<div class="spollers__text">
-			Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas hic numquam magni. Nulla, laborum illo enim qui
-			eum architecto soluta, quos provident natus nobis a et aspernatur, labore fuga aliquam!
+		<button class="spollers__title btn-reset" type="button" tabindex="-1" data-spoller>
+			<span>Существует гарантия на ремонт?</span>
+		</button>
+		<div class="spollers__text text">
+			Фирма заключает договор с заказчиком, в документе указана цена строительных работ, скидка.
+			Сколько стоит ремонт, все точно указано, а изменение цен – исключено. В договоре написано
+			число дней. Каждый этап работы осуществляем качественно и быстро. После заключения договора
+			приступим к выполнению заказа.
 		</div>
 	</div>
-</div>
+	<div class="spollers__item">
+		<button class="spollers__title btn-reset" type="button" tabindex="-1" data-spoller>
+			<span>Можно сделать ремонт в одной комнате в загородном доме?</span>
+		</button>
+		<div class="spollers__text text">
+			Фирма заключает договор с заказчиком, в документе указана цена строительных работ, скидка.
+			Сколько стоит ремонт, все точно указано, а изменение цен – исключено. В договоре написано
+			число дней. Каждый этап работы осуществляем качественно и быстро. После заключения договора
+			приступим к выполнению заказа.
+		</div>
+	</div>
 
-<div class="spollers" data-spollers="650,min">
-	<div class="spollers__item">
-		<button class="spollers__title btn-reset" type="button" tabindex="-1" data-spoller >Спойлер работает на экранах >=
-			650px</button>
-		<div class="spollers__text">
-			Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas hic numquam magni. Nulla, laborum illo enim qui
-			eum architecto soluta, quos provident natus nobis a et aspernatur, labore fuga aliquam!
+
+
+		<div class="spollers__item">
+		<button class="spollers__title btn-reset" type="button" tabindex="-1" data-spoller>
+			<span>Ваша компания работает по договору?</span>
+		</button>
+		<div class="spollers__text text">
+			Фирма заключает договор с заказчиком, в документе указана цена строительных работ, скидка.
+			Сколько стоит ремонт, все точно указано, а изменение цен – исключено. В договоре написано
+			число дней. Каждый этап работы осуществляем качественно и быстро. После заключения договора
+			приступим к выполнению заказа.
+		</div>
+	</div>
+		<div class="spollers__item">
+		<button class="spollers__title btn-reset" type="button" tabindex="-1" data-spoller>
+			<span>Ваша компания работает по договору?</span>
+		</button>
+		<div class="spollers__text text">
+			Фирма заключает договор с заказчиком, в документе указана цена строительных работ, скидка.
+			Сколько стоит ремонт, все точно указано, а изменение цен – исключено. В договоре написано
+			число дней. Каждый этап работы осуществляем качественно и быстро. После заключения договора
+			приступим к выполнению заказа.
+		</div>
+	</div>
+		<div class="spollers__item">
+		<button class="spollers__title btn-reset" type="button" tabindex="-1" data-spoller>
+			<span>Ваша компания работает по договору?</span>
+		</button>
+		<div class="spollers__text text">
+			Фирма заключает договор с заказчиком, в документе указана цена строительных работ, скидка.
+			Сколько стоит ремонт, все точно указано, а изменение цен – исключено. В договоре написано
+			число дней. Каждый этап работы осуществляем качественно и быстро. После заключения договора
+			приступим к выполнению заказа.
+		</div>
+	</div>
+		<div class="spollers__item">
+		<button class="spollers__title btn-reset" type="button" tabindex="-1" data-spoller>
+			<span>Ваша компания работает по договору?</span>
+		</button>
+		<div class="spollers__text text">
+			Фирма заключает договор с заказчиком, в документе указана цена строительных работ, скидка.
+			Сколько стоит ремонт, все точно указано, а изменение цен – исключено. В договоре написано
+			число дней. Каждый этап работы осуществляем качественно и быстро. После заключения договора
+			приступим к выполнению заказа.
 		</div>
 	</div>
 </div>
