--- a/assets/components/spollers/_spollers.scss
+++ b/assets/components/spollers/_spollers.scss
@@ -1,7 +1,9 @@
 .spollers {
 	overflow-y: auto;
 	margin: 0 auto;
+	margin-bottom: 50px;
 	padding: 15px 40px 15px 15px;
+	width: 100%;
 	height: 390px;
 	max-width: 1055px;
 	scrollbar-width: auto;
@@ -63,6 +65,7 @@
 
 	&.init .spollers__title {
 		padding: 20px;
+		padding-right: 70px;
 	}
 
 	&.init .spollers__title::before,
