--- a/assets/components/header/_header.scss
+++ b/assets/components/header/_header.scss
@@ -12,9 +12,39 @@
 		max-width: $container-width + px;
 	}
 
+	&__left {
+		display: flex;
+		align-items: center;
+		gap: 50px;
+	}
+
 	&__logo {
 		z-index: 5;
 		display: block;
+	}
+
+	&__menu {
+		position: relative;
+
+		&::before {
+			content: '';
+			position: absolute;
+			right: 0;
+			top: 0;
+			width: 100%;
+			height: 1px;
+			background-color: var(--accent-color);
+		}
+
+		&::after {
+			content: '';
+			position: absolute;
+			right: 0;
+			bottom: 0;
+			width: 100%;
+			height: 1px;
+			background-color: var(--accent-color);
+		}
 	}
 
 	&.fixed {
@@ -28,47 +58,31 @@
 .logo__img {
 	width: 200px;
 	height: auto;
-	fill: var(--light-color);
+	fill: var(--accent-color);
 }
 
 .menu {
+	width: 100%;
+
+	&__body {
+		width: 100%;
+	}
+
 	&__burger {
 		display: none;
 	}
 
-	&__item {
-		margin-right: 20px;
-
-		&:last-child {
-			margin: 0;
-		}
+	&__list {
+		justify-content: space-between;
 	}
 
 	&__link {
 		@include adaptive-font(18, 16);
-		position: relative;
-		color: var(--light-color);
-
-		&::after {
-			content: '';
-			position: absolute;
-			left: 50%;
-			bottom: -3px;
-			width: 0;
-			height: 2px;
-			background-color: currentcolor;
-			opacity: 0;
-			visibility: hidden;
-			transform: translateX(-50%);
-			transition: width 0.5s;
-		}
+		color: var(--dark-color);
+		transition: color 0.2s;
 
 		&:hover {
-			&::after {
-				width: 100%;
-				opacity: 1;
-				visibility: visible;
-			}
+			color: var(--accent-color);
 		}
 	}
 }
