--- a/assets/components/select/select.html
+++ b/assets/components/select/select.html
@@ -1,14 +1,24 @@
-<div class="select is-active">
+<div class="select">
 	<div class="select__header">
-		<span class="select__current">Value 1</span>
-		<div class="select__icon">&times;</div>
+		<span class="select__current">Ярославль</span>
+		<div class="select__icon">
+			<svg class="select__arrow">
+				<use href="img/icons/sprite.svg#arrow"></use>
+			</svg>
+		</div>
 	</div>
 
 	<div class="select__body">
-		<div class="select__item">Value 1</div>
-		<div class="select__item">Value 2</div>
-		<div class="select__item">Value 3</div>
-		<div class="select__item">Value 4</div>
-		<div class="select__item">Value 5</div>
+		<div class="select__item">Ярославль</div>
+		<div class="select__item">Гаврилов Ям</div>
+		<div class="select__item">Данилов</div>
+		<div class="select__item">Любим</div>
+		<div class="select__item">Мышкин</div>
+		<div class="select__item">Переславль-Залесский</div>
+		<div class="select__item">Пошехонье</div>
+		<div class="select__item">Ростов</div>
+		<div class="select__item">Рыбинск</div>
+		<div class="select__item">Тутаев</div>
+		<div class="select__item">Углич</div>
 	</div>
 </div>
