--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -15,5 +15,6 @@
 
 // * Main styles
 @import '../components/header/header';
+@import '../components/select/select';
 @import 'chunk/hero';
 @import 'chunk/footer';
