Вёрстка правой части шапки

--- a/assets/components/header/header.html
+++ b/assets/components/header/header.html
@@ -6,6 +6,18 @@
 			</a>
 			@include('../select/select.html')
 		</div>
+		<div class="header__links links">
+			<div class="links__inner">
+				<svg class="links__icon-phone">
+					<use href="img/icons/sprite.svg#phone"></use>
+				</svg>
+				<div class="links__item links-item">
+					<a class="links-item__phone link-reset" href="tel:+79999999999">8-999-999-99-99</a>
+					<a class="links-item__modal-link link-reset" href="#/">Оставить заявку</a>
+				</div>
+			</div>
+			<a class="links-item__link link link-reset" href="#/">Рассчитать стоимость</a>
+		</div>
 	</div>
 	<div class="header__menu menu">
 		<button class="menu__burger burger btn-reset">
