--- a/assets/components/header/_header.scss
+++ b/assets/components/header/_header.scss
@@ -61,6 +61,41 @@
 	fill: var(--accent-color);
 }
 
+.links {
+	display: flex;
+	align-items: center;
+	gap: 50px;
+
+	&__inner {
+		display: flex;
+		align-items: center;
+		gap: 15px;
+	}
+
+	&__icon-phone {
+		width: 36px;
+		height: 36px;
+	}
+
+	&__item {
+		display: flex;
+		flex-direction: column;
+	}
+
+	&-item__phone {
+		font-weight: 500;
+		font-size: 20px;
+		line-height: 140%;
+	}
+
+	&-item__modal-link {
+		font-weight: 500;
+		font-size: 12px;
+		line-height: 140%;
+		color: var(--grey-color);
+	}
+}
+
 .menu {
 	width: 100%;
 
