Вёрстка секции Преимущества

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -18,5 +18,6 @@
 @import '../components/select/select';
 @import 'chunk/hero';
 @import 'chunk/repair-cost';
+@import 'chunk/advantage';
 @import 'chunk/questions';
 @import 'chunk/footer';
