--- a/assets/components/header/header.html
+++ b/assets/components/header/header.html
@@ -13,10 +13,10 @@
 				</svg>
 				<div class="links__item links-item">
 					<a class="links-item__phone link-reset" href="tel:+79999999999">8-999-999-99-99</a>
-					<a class="links-item__modal-link link-reset" href="#/">Оставить заявку</a>
+					<a class="links-item__modal link-reset" href="#/">Оставить заявку</a>
 				</div>
 			</div>
-			<a class="links-item__link link link-reset" href="#/">Рассчитать стоимость</a>
+			<a class="link link-reset" href="#/">Рассчитать стоимость</a>
 		</div>
 	</div>
 	<div class="header__menu menu">
