--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -19,5 +19,6 @@
 @import 'chunk/hero';
 @import 'chunk/repair-cost';
 @import 'chunk/advantage';
+@import 'chunk/steps';
 @import 'chunk/questions';
 @import 'chunk/footer';
