Вёрстка секции Контакты

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -21,4 +21,5 @@
 @import 'chunk/advantage';
 @import 'chunk/steps';
 @import 'chunk/questions';
+@import 'chunk/contacts';
 @import 'chunk/footer';
