--- a/assets/scss/_interface.scss
+++ b/assets/scss/_interface.scss
@@ -31,6 +31,17 @@
 			background: linear-gradient(180deg, rgb(35 199 239 / 55%) 0%, rgb(35 199 239 / 0%) 100%);
 		}
 	}
+
+	@media (max-width: 992px) {
+		padding: 50px 0;
+
+		&--decor {
+			display: none;
+		}
+	}
+	@media (max-width: 576px) {
+		padding: 30px 0;
+	}
 }
 
 .title {
@@ -40,6 +51,12 @@
 	font-weight: 600;
 	line-height: 40px;
 	text-align: center;
+	@media (max-width: 992px) {
+		margin-bottom: 75px;
+	}
+	@media (max-width: 576px) {
+		margin-bottom: 40px;
+	}
 }
 
 .text {
