--- a/assets/scss/chunk/_advantage.scss
+++ b/assets/scss/chunk/_advantage.scss
@@ -5,6 +5,10 @@
 		align-items: center;
 		justify-content: center;
 		gap: 50px 100px;
+
+		@media (max-width: 768px) {
+			gap: 30px;
+		}
 	}
 }
 
@@ -16,26 +20,37 @@
 	max-width: 500px;
 	box-shadow: 0 0 35px rgb(0 0 0 / 25%);
 	background: var(--light-color);
-	gap: 30px;
+	gap: 20px;
 
 	&__icon {
-		width: 120px;
-		height: auto;
+		flex-shrink: 0;
+		width: 80px;
+		height: 80px;
+	}
+
+	&__text {
+		@media (max-width: 576px) {
+			text-align: center;
+		}
 	}
 
 	&__title {
+		@include adaptive-font(20, 18);
 		margin: 0;
 		margin-bottom: 10px;
 		font-weight: 500;
-		font-size: 20px;
 		line-height: 140%;
 		text-transform: uppercase;
 	}
 
 	&__descr {
+		@include adaptive-font(17, 16);
 		margin: 0;
 		font-weight: 400;
-		font-size: 18px;
 		line-height: 140%;
+	}
+	@media (max-width: 576px) {
+		flex-direction: column;
+		padding: 15px 10px;
 	}
 }
