Вёрстка и адаптация секции Информация

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -17,6 +17,7 @@
 @import '../components/header/header';
 @import '../components/select/select';
 @import 'chunk/hero';
+@import 'chunk/info';
 @import 'chunk/repair-cost';
 @import 'chunk/advantage';
 @import 'chunk/steps';
