Частичная вёрстка главной секции

--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -9,5 +9,6 @@ $container-width: 1430;
 	--dark-opacity-color: #3434348a;
 	--bg-color: var(--light-color);
 	--accent-color: #23c7ef;
+	--dark-blue-color: #2c8ba1;
 	--grey-color: #5e5e5e;
 }
