--- a/assets/scss/_interface.scss
+++ b/assets/scss/_interface.scss
@@ -1,6 +1,10 @@
 .section {
 	padding: 75px 0;
 
+	&-hero {
+		background-image: url('@img/hero/hero-bg.jpg');
+	}
+
 	&--decor {
 		position: relative;
 
@@ -83,6 +87,18 @@
 		border: 2px solid var(--dark-color);
 		color: var(--dark-color);
 		background-color: transparent;
+	}
+
+	&--transparent {
+		border: 2px solid #fff;
+		border-radius: 15px;
+		background-color: transparent;
+
+		&:hover {
+			border: 2px solid transparent;
+			color: var(--light-color);
+			background-color: var(--accent-color);
+		}
 	}
 }
 
