--- a/assets/scss/_interface.scss
+++ b/assets/scss/_interface.scss
@@ -13,6 +13,7 @@
 			position: absolute;
 			left: -180px;
 			top: -150px;
+			z-index: -1;
 			border-radius: 100%;
 			width: 400px;
 			height: 400px;
@@ -29,6 +30,7 @@
 			position: absolute;
 			right: -180px;
 			bottom: -150px;
+			z-index: -1;
 			border-radius: 100%;
 			width: 400px;
 			height: 400px;
@@ -39,7 +41,8 @@
 	@media (max-width: 992px) {
 		padding: 50px 0;
 
-		&--decor {
+		&--decor::before,
+		&--decor::after {
 			display: none;
 		}
 	}
