--- a/assets/scss/chunk/_steps.scss
+++ b/assets/scss/chunk/_steps.scss
@@ -1,26 +1,48 @@
 .steps {
 	counter-reset: steps-count 0;
 	display: flex;
+	flex-wrap: wrap-reverse;
 	align-items: center;
-	justify-content: end;
-	gap: 80px;
+	justify-content: center;
+	gap: 60px;
+
+	&__form {
+		display: flex;
+		justify-content: flex-end;
+		width: 40%;
+		@media (max-width: 1100px) {
+			justify-content: center;
+			width: 100%;
+		}
+	}
 
 	&__cards {
 		display: flex;
 		flex-direction: column;
 		width: 55%;
+		@media (max-width: 1100px) {
+			width: 70%;
+		}
+		@media (max-width: 992px) {
+			width: 90%;
+		}
+	}
+
+	@media (max-width: 992px) {
+		gap: 50px;
 	}
 }
 
 .steps-card {
 	display: flex;
 	align-items: center;
-	gap: 80px;
+	gap: 60px;
 	margin-bottom: 50px;
 
 	&__circle {
 		counter-increment: steps-count;
 		position: relative;
+		flex-shrink: 0;
 		border-radius: 100%;
 		width: 85px;
 		height: 85px;
@@ -34,6 +56,10 @@
 			border-left: 4px var(--accent-color) dashed;
 			height: 180px;
 			transform: translateX(-50%);
+
+			@media (max-width: 576px) {
+				display: none;
+			}
 		}
 
 		&::after {
@@ -54,6 +80,7 @@
 		display: flex;
 		align-items: center;
 		gap: 30px;
+		align-self: flex-start;
 	}
 
 	&__icon {
@@ -87,5 +114,14 @@
 				height: 0;
 			}
 		}
+	}
+
+	@media (max-width: 1200px) {
+		gap: 40px;
+		margin-bottom: 35px;
+	}
+	@media (max-width: 576px) {
+		gap: 20px;
+		flex-direction: column;
 	}
 }
