--- a/assets/components/select/select.html
+++ b/assets/components/select/select.html
@@ -1,11 +1,12 @@
 <div class="select">
 	<div class="select__header">
+		<svg class="select__geo">
+			<use href="img/icons/sprite.svg#geo"></use>
+		</svg>
 		<span class="select__current">Ярославль</span>
-		<div class="select__icon">
-			<svg class="select__arrow">
-				<use href="img/icons/sprite.svg#arrow"></use>
-			</svg>
-		</div>
+		<svg class="select__arrow">
+			<use href="img/icons/sprite.svg#arrow"></use>
+		</svg>
 	</div>
 
 	<div class="select__body">
