--- a/assets/components/header/_header.scss
+++ b/assets/components/header/_header.scss
@@ -1,4 +1,5 @@
 .header {
+	padding-bottom: 60px;
 	width: 100%;
 	background-color: var(--bg-color);
 
@@ -45,6 +46,11 @@
 			height: 1px;
 			background-color: var(--accent-color);
 		}
+	}
+
+	&__yandex {
+		width: 95px;
+		height: 50px;
 	}
 
 	&.fixed {
@@ -107,7 +113,13 @@
 	}
 
 	&__list {
+		flex-wrap: wrap;
 		justify-content: space-between;
+		gap: 10px 30px;
+
+		@media (max-width: 1200px) {
+			justify-content: center;
+		}
 	}
 
 	&__link {
@@ -134,11 +146,14 @@
 
 @media (max-width: 767px) {
 	.menu__burger {
-		position: relative;
+		position: absolute;
+		right: 40px;
+		top: 50%;
 		z-index: 15;
 		display: block;
 		width: 30px;
 		height: 18px;
+		transform: translateY(-50%);
 		cursor: pointer;
 	}
 
@@ -147,10 +162,9 @@
 		&::before,
 		&::after {
 			position: absolute;
-			left: 0;
 			width: 100%;
 			height: 10%;
-			background-color: var(--light-color);
+			background-color: var(--accent-color);
 			transition: all 0.3s ease 0s;
 		}
 
@@ -173,16 +187,19 @@
 		}
 
 		&.active span {
+			background-color: var(--light-color);
 			transform: scale(0) translate(0, -50%);
 		}
 
 		&.active::before {
 			top: 50%;
+			background-color: var(--light-color);
 			transform: rotate(-45deg) translate(0, -50%);
 		}
 
 		&.active::after {
 			bottom: 50%;
+			background-color: var(--light-color);
 			transform: rotate(45deg) translate(0, 50%);
 		}
 	}
@@ -193,14 +210,19 @@
 		top: 0;
 		z-index: 10;
 		overflow: auto;
-		padding: 100px 30px 30px;
+		padding: 80px 30px 30px;
 		width: 100%;
 		height: 100%;
-		background-color: rgb(0 0 0 / 90%);
+		background-color: var(--accent-color);
 		transition: left 0.3s ease 0s;
 
 		&.active {
 			left: 0;
+
+			.menu__link {
+				@include adaptive-font(20, 16);
+				color: var(--light-color);
+			}
 		}
 
 		// * Стили для плашки фиксированного меню (закомментировать если не нужна фиксипрованная шапка)
@@ -223,9 +245,5 @@
 		&:last-child {
 			margin-bottom: 0;
 		}
-	}
-
-	.menu__link {
-		@include adaptive-font(20, 16);
 	}
 }
