--- a/assets/components/header/header.html
+++ b/assets/components/header/header.html
@@ -1,11 +1,16 @@
 <header class="header">
-	<div class="header__container">
+	<!-- <div class="header__container">
 		<div class="header__left">
 			<a class="header__logo logo" href="#">
 				<img class="logo__img" src="@img/header/logo.svg" alt="Logo" />
 			</a>
 			@include('../select/select.html')
 		</div>
+
+		<svg class="header__yandex">
+			<use href="img/icons/sprite.svg#yandex"></use>
+		</svg>
+
 		<div class="header__links links">
 			<div class="links__inner">
 				<svg class="links__icon-phone">
@@ -18,7 +23,7 @@
 			</div>
 			<a class="link link-reset" href="#/">Рассчитать стоимость</a>
 		</div>
-	</div>
+	</div> -->
 	<div class="header__menu menu">
 		<button class="menu__burger burger btn-reset">
 			<span class="burger__line"></span>
