--- a/assets/scss/chunk/_hero.scss
+++ b/assets/scss/chunk/_hero.scss
@@ -1,9 +1,11 @@
 .hero {
 	display: flex;
+	flex-wrap: wrap;
 	align-items: center;
 	justify-content: space-between;
 	padding: 60px 0;
 	color: var(--light-color);
+	gap: 20px;
 
 	&__card {
 		border-radius: 15px;
@@ -11,15 +13,22 @@
 		max-width: 775px;
 		background: rgb(0 0 0 / 15%);
 		backdrop-filter: blur(3.5px);
+		@media (max-width: 576px) {
+			padding: 25px 40px;
+		}
 	}
 
 	&__title {
-		@include adaptive-font(45, 40);
+		@include adaptive-font(45, 25);
 		margin: 0;
 		margin-bottom: 50px;
 		font-weight: 700;
 		line-height: 145%;
 		text-align: left;
+		@media (max-width: 576px) {
+			margin-bottom: 15px;
+			text-align: center;
+		}
 	}
 
 	&__text {
@@ -27,11 +36,19 @@
 		margin: 0;
 		margin-bottom: 75px;
 		line-height: 140%;
+		@media (max-width: 576px) {
+			margin-bottom: 50px;
+			text-align: center;
+		}
 	}
 
 	&__links {
 		display: flex;
 		gap: 25px;
+		@media (max-width: 768px) {
+			flex-direction: column;
+			gap: 15px;
+		}
 	}
 
 	&__link {
@@ -44,9 +61,16 @@
 	}
 
 	&__calculator {
+		display: flex;
+		align-items: center;
+		justify-content: center;
 		border-radius: 15px;
 		width: 450px;
 		height: 600px;
 		background-color: var(--dark-blue-color);
+	}
+
+	@media (max-width: 1280px) {
+		justify-content: center;
 	}
 }
