--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -19,6 +19,7 @@
 @import 'chunk/hero';
 @import 'chunk/info';
 @import 'chunk/repair-cost';
+@import 'chunk/foreman';
 @import 'chunk/advantage';
 @import 'chunk/steps';
 @import 'chunk/questions';
