--- a/assets/scss/_interface.scss
+++ b/assets/scss/_interface.scss
@@ -12,6 +12,13 @@
 		background-repeat: no-repeat;
 	}
 
+	&-installment {
+		background-image: url('@img/installment/installment-bg.jpg');
+		background-position: center;
+		background-size: cover;
+		background-repeat: no-repeat;
+	}
+
 	&--decor {
 		position: relative;
 
