--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -22,6 +22,7 @@
 @import 'chunk/foreman';
 @import 'chunk/advantage';
 @import 'chunk/steps';
+@import 'chunk/installment';
 @import 'chunk/questions';
 @import 'chunk/contacts';
 @import 'chunk/footer';
