--- a/assets/components/header/header.html
+++ b/assets/components/header/header.html
@@ -21,13 +21,13 @@
 					<a class="links-item__modal link-reset" href="#/">Оставить заявку</a>
 				</div>
 			</div>
-			<a class="link link-reset" href="#/">Рассчитать стоимость</a>
+			<a class="header__link link link-reset" href="#/">Рассчитать стоимость</a>
 		</div>
-	</div>
-	<div class="header__menu menu">
 		<button class="menu__burger burger btn-reset">
 			<span class="burger__line"></span>
 		</button>
+	</div>
+	<div class="header__menu menu">
 		<div class="header__container">
 			<nav class="menu__body">
 				<ul class="menu__list list-reset">
