--- a/assets/components/select/select.html
+++ b/assets/components/select/select.html
@@ -11,11 +11,11 @@
 
 	<div class="select__body">
 		<div class="select__item">Ярославль</div>
-		<div class="select__item">Гаврилов Ям</div>
+		<div class="select__item">Гаврилов&#160;Ям</div>
 		<div class="select__item">Данилов</div>
 		<div class="select__item">Любим</div>
 		<div class="select__item">Мышкин</div>
-		<div class="select__item">Переславль-Залесский</div>
+		<div class="select__item">Переславль&#8209;Залесский</div>
 		<div class="select__item">Пошехонье</div>
 		<div class="select__item">Ростов</div>
 		<div class="select__item">Рыбинск</div>
