Вёрстка и адаптация секции "Акции"

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -21,6 +21,7 @@
 @import 'chunk/repair-cost';
 @import 'chunk/advantage';
 @import 'chunk/steps';
+@import 'chunk/stock';
 @import 'chunk/questions';
 @import 'chunk/contacts';
 @import 'chunk/footer';
