--- a/assets/scss/_interface.scss
+++ b/assets/scss/_interface.scss
@@ -70,10 +70,11 @@
 	margin: 0;
 	margin-bottom: 100px;
 	font-weight: 600;
-	line-height: 40px;
+	line-height: 140%;
 	text-align: center;
 	@media (max-width: 992px) {
 		margin-bottom: 75px;
+		line-height: 115%;
 	}
 	@media (max-width: 576px) {
 		margin-bottom: 40px;
@@ -89,11 +90,10 @@
 }
 
 .link {
-	@include adaptive-font(20, 14);
 	display: inline-block;
 	border: 2px solid transparent;
 	border-radius: 15px;
-	padding: 12px 30px;
+	padding: 10px 20px;
 	line-height: 140%;
 	text-align: center;
 	color: var(--light-color);
@@ -108,7 +108,6 @@
 
 	&--transparent {
 		border: 2px solid #fff;
-		border-radius: 15px;
 		background-color: transparent;
 
 		&:hover {
