--- a/assets/scss/chunk/_numbers.scss
+++ b/assets/scss/chunk/_numbers.scss
@@ -1,8 +1,4 @@
 .numbers {
-	&__title {
-		margin-bottom: 150px;
-	}
-
 	&__cards {
 		display: flex;
 		flex-wrap: wrap;
@@ -10,8 +6,13 @@
 		justify-content: center;
 		gap: 120px 100px;
 
-		@media (max-width: 1280px) {
+		@media (max-width: 1200px) {
 			gap: 100px;
+		}
+
+		@media (max-width: 992px) {
+			padding-top: 50px;
+			gap: 60px;
 		}
 	}
 }
@@ -24,32 +25,39 @@
 	padding: 20px 25px;
 	width: 100%;
 	max-width: 450px;
-	box-shadow: 0 0 35px rgb(0 0 0 / 25%);
+	box-shadow: 0 0 15px rgb(0 0 0 / 25%);
 	background-color: var(--light-color);
 	gap: 30px;
 
 	&__circle {
-		@include adaptive-font(32, 24);
+		@include adaptive-font(30, 22);
 		position: absolute;
-		left: -90px;
-		top: -90px;
+		left: -60px;
+		top: -60px;
 		display: flex;
 		align-items: center;
 		justify-content: center;
 		border-radius: 100%;
-		width: 120px;
-		height: 120px;
+		width: 90px;
+		height: 90px;
+		box-shadow: 0 0 15px rgb(0 0 0 / 25%);
 		font-weight: 600;
 		color: var(--light-color);
 		background-color: var(--accent-color);
-		filter: drop-shadow(0 0 15px rgb(0 0 0 / 25%));
 
 		@media (max-width: 1280px) {
 			left: 50%;
 			top: -75px;
-			width: 80px;
-			height: 80px;
+			width: 90px;
+			height: 90px;
 			transform: translateX(-50%);
+		}
+
+		@media (max-width: 992px) {
+			top: -30px;
+			border-radius: 15px;
+			width: 100px;
+			height: 40px;
 		}
 	}
 
@@ -62,19 +70,18 @@
 			fill: var(--dark-color);
 		}
 
-		@media (max-width: 1280px) {
+		@media (max-width: 1200px) {
 			display: none;
 		}
 	}
 
-	&__text {
-		@include adaptive-font(20, 18);
+	&__title {
 		margin: 0;
 		font-weight: 500;
 		line-height: 140%;
 		text-transform: uppercase;
 
-		@media (max-width: 1280px) {
+		@media (max-width: 1200px) {
 			text-align: center;
 		}
 	}
