Вёрстка и адаптация секции "Под ключ"

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -22,6 +22,7 @@
 @import 'chunk/advantage';
 @import 'chunk/steps';
 @import 'chunk/stock';
+@import 'chunk/turnkey';
 @import 'chunk/questions';
 @import 'chunk/contacts';
 @import 'chunk/footer';
