Вёрстка и адаптация секции "Этапы ремонта"

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -23,6 +23,7 @@
 @import 'chunk/advantage';
 @import 'chunk/steps';
 @import 'chunk/stock';
+@import 'chunk/repair-stages';
 @import 'chunk/foreman';
 @import 'chunk/turnkey';
 @import 'chunk/numbers';
