Вёрстка компонента "Калькулятор"

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -17,6 +17,7 @@
 @import '../components/header/header';
 @import '../components/select/select';
 @import 'chunk/hero';
+@import '../components/calc/calc';
 @import 'chunk/info';
 @import 'chunk/cost';
 @import 'chunk/installment';
