--- a/assets/components/calc/_calc.scss
+++ b/assets/components/calc/_calc.scss
@@ -7,4 +7,92 @@
 	width: 100%;
 	max-width: 450px;
 	background-color: var(--dark-blue-color);
+
+	&__title {
+		@include adaptive-font(30, 28);
+		margin: 0;
+		margin-bottom: 20px;
+		font-weight: 900;
+		line-height: 115%;
+	}
+
+	&__cost {
+		@include adaptive-font(30, 28);
+		margin-bottom: 20px;
+		font-weight: 900;
+		line-height: 115%;
+	}
+
+	&__inner {
+		position: relative;
+		display: flex;
+		align-items: stretch;
+		justify-content: space-between;
+		margin-bottom: 20px;
+	}
+
+	&__phone {
+		outline: none;
+		border: 1px solid var(--light-color);
+		border-radius: 15px;
+		padding: 10px 15px;
+		height: 100%;
+		color: var(--light-color);
+		background-color: transparent;
+	}
+
+	&__send {
+		border: none;
+		border-radius: 15px;
+		padding: 15px;
+		height: 100%;
+		color: var(--light-color);
+		background-color: var(--accent-color);
+		cursor: pointer;
+	}
+}
+
+.calc-square {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	gap: 20px;
+	margin-bottom: 40px;
+
+	&__range {
+		width: 80%;
+	}
+
+	&__label {
+		border-radius: 15px;
+		padding: 10px 25px;
+		background-color: var(--light-color);
+	}
+
+	&__value {
+		color: var(--dark-color);
+	}
+}
+
+.calc-type {
+	display: grid;
+	grid-template-columns: 2fr 2fr;
+	margin-bottom: 40px;
+	gap: 5px 15px;
+}
+
+.calc-policy {
+	@include adaptive-font(12, 11);
+	margin: 0;
+	line-height: 14px;
+	color: var(--light-color);
+
+	&__link {
+		border-bottom: 1px solid var(--light-color);
+		transition: opacity 0.3s;
+
+		&:hover {
+			opacity: 0.7;
+		}
+	}
 }
