Вёрстка секции "Где необходим ремонт"

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -24,6 +24,7 @@
 @import 'chunk/advantage';
 @import 'chunk/examples';
 @import 'chunk/steps';
+@import 'chunk/where';
 @import 'chunk/stock';
 @import 'chunk/repair-stages';
 @import 'chunk/foreman';
