--- a/assets/scss/_interface.scss
+++ b/assets/scss/_interface.scss
@@ -257,3 +257,51 @@
 .form-social input[type='radio']:checked + label {
 	border: 1px solid var(--grey-color);
 }
+
+.table {
+	overflow: hidden;
+	border-collapse: collapse;
+	border-radius: 15px;
+	border-spacing: 0;
+	width: 100%;
+	box-shadow: 0 0 10px rgb(0 0 0 / 25%);
+
+	&__body {
+		tr {
+			border-bottom: 1px solid #dfdfdf;
+
+			&:last-child {
+				border: none;
+			}
+		}
+	}
+
+	&__header {
+		color: var(--light-color);
+		background-color: var(--accent-color);
+
+		th {
+			&:first-child {
+				text-align: left;
+			}
+		}
+	}
+
+	&__title {
+		padding: 20px 25px;
+		font-weight: 600;
+		line-height: 140%;
+	}
+
+	&__item {
+		padding: 20px 25px;
+		font-weight: 400;
+		line-height: 140%;
+		text-align: center;
+		color: var(--grey-color);
+
+		&:first-child {
+			text-align: left;
+		}
+	}
+}
