--- a/assets/scss/_interface.scss
+++ b/assets/scss/_interface.scss
@@ -259,12 +259,15 @@
 }
 
 .table {
-	overflow: hidden;
 	border-collapse: collapse;
-	border-radius: 15px;
 	border-spacing: 0;
 	width: 100%;
-	box-shadow: 0 0 10px rgb(0 0 0 / 25%);
+
+	&__wrap {
+		overflow-x: auto;
+		border-radius: 15px;
+		box-shadow: 0 0 10px rgb(0 0 0 / 25%);
+	}
 
 	&__body {
 		tr {
