Вёрстка секции "Цены на отдельные услуги при ремонте"

--- a/assets/components/tabs/_tabs.scss
+++ b/assets/components/tabs/_tabs.scss
@@ -1,27 +1,42 @@
 .tabs {
-	margin-top: 150px;
+	margin-bottom: 20px;
 	width: 100%;
 
 	&__header {
 		display: flex;
 		flex-wrap: wrap;
-		justify-content: center;
+		justify-content: flex-start;
+		gap: 10px;
+		margin-bottom: 30px;
 
 		&-item {
-			margin: 0 25px;
+			border-radius: 15px;
+			padding: 10px 20px;
+			text-align: center;
+			color: var(--light-color);
+			background-color: var(--accent-color);
+			transition: filter 0.3s;
 			cursor: pointer;
 
+			&:hover {
+				filter: brightness(113%);
+			}
+
 			&.active {
-				color: #f00;
+				filter: brightness(113%);
 			}
 		}
 	}
 
 	&__content {
-		@include adaptive-font(70, 40);
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		margin-top: 50px;
+		width: 100%;
+
+		&-item {
+			width: 100%;
+			animation: fade-in-left 1s;
+		}
 	}
 }
