Вёрстка секции "От чего зависит стоимость ремонта"

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -32,6 +32,7 @@
 @import 'chunk/service-prices';
 @import '../components/tabs/tabs';
 @import 'chunk/repair-stages';
+@import 'chunk/cost-depends';
 @import 'chunk/foreman';
 @import 'chunk/turnkey';
 @import 'chunk/experts';
