--- a/assets/scss/_interface.scss
+++ b/assets/scss/_interface.scss
@@ -313,3 +313,20 @@
 		}
 	}
 }
+
+.accept-payment {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	gap: 10px;
+
+	&__text {
+		font-weight: 500;
+		color: var(--light-color);
+	}
+
+	&__icon {
+		width: 60px;
+		height: 20px;
+	}
+}
