Подключение библиотеки fslightbox, вёрстка и адаптация секции "Галерея наших работ"

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -33,6 +33,7 @@
 @import '../components/tabs/tabs';
 @import 'chunk/repair-stages';
 @import 'chunk/cost-depends';
+@import 'chunk/gallery';
 @import 'chunk/foreman';
 @import 'chunk/turnkey';
 @import 'chunk/experts';
