--- a/assets/scss/chunk/_examples.scss
+++ b/assets/scss/chunk/_examples.scss
@@ -16,6 +16,7 @@
 	min-height: 440px;
 	max-width: 355px;
 	box-shadow: 0 0 10px rgb(0 0 0 / 25%);
+	background-color: var(--light-color);
 
 	&__img {
 		position: relative;
