--- a/assets/scss/chunk/_product-stages.scss
+++ b/assets/scss/chunk/_product-stages.scss
@@ -1,16 +1,28 @@
+.product-stages {
+	&__text {
+		font-weight: 500;
+		text-align: center;
+		text-transform: uppercase;
+		color: var(--dark-color);
+	}
+}
+
 .stages-tabs {
-	margin-top: 150px;
+	margin: 0 auto;
+	margin-bottom: 50px;
 	max-width: 1100px;
 
 	&__header {
 		display: flex;
 		flex-wrap: wrap;
+		align-items: center;
 		justify-content: space-between;
+		margin-bottom: 25px;
+		gap: 15px;
 
 		&-item {
-			border: 2px dashed var(--accent-color);
-			border-bottom: none;
-			border-radius: 15px 15px 0 0;
+			border: 2px solid var(--accent-color);
+			border-radius: 15px;
 			padding: 15px 40px;
 			text-align: center;
 			color: var(--accent-color);
@@ -22,6 +34,10 @@
 				background-color: var(--accent-color);
 			}
 		}
+
+		@media (max-width: 992px) {
+			justify-content: center;
+		}
 	}
 
 	&__content {
@@ -29,11 +45,11 @@
 		align-items: center;
 		justify-content: center;
 		margin: 0 auto;
-		border: 2px solid var(--dark-opacity-color);
-		border-top: none;
-		border-radius: 0 0 15px 15px;
+		border-radius: 15px;
 		padding: 20px 25px;
 		width: 100%;
+		box-shadow: 0 0 10px rgb(0 0 0 / 25%);
+		background-color: var(--light-color);
 	}
 }
 
@@ -44,17 +60,26 @@
 
 	&__info {
 		width: 45%;
+
+		@media (max-width: 992px) {
+			width: 100%;
+		}
 	}
 
 	&__photos {
 		display: flex;
 		flex-wrap: wrap;
-		width: 45%;
+		width: 48%;
 		gap: 30px;
 		height: min-content;
+
+		@media (max-width: 992px) {
+			width: 100%;
+		}
 	}
 
 	&__title {
+		margin: 0;
 		margin-bottom: 45px;
 	}
 
@@ -64,7 +89,7 @@
 
 	&__item {
 		position: relative;
-		margin-bottom: 7px;
+		margin-bottom: 10px;
 		padding-left: 30px;
 
 		&::before {
@@ -75,6 +100,8 @@
 			width: 18px;
 			height: 19px;
 			background-image: url('../img/icons/sprite.svg#checkbox');
+			background-position: center;
+			background-repeat: no-repeat;
 			transform: translateY(-50%);
 		}
 
@@ -85,7 +112,9 @@
 
 	&__inner {
 		display: flex;
+		flex-wrap: wrap;
 		width: fit-content;
+		gap: 25px;
 	}
 
 	&__img {
@@ -94,12 +123,16 @@
 		width: 200px;
 		height: 140px;
 	}
+
+	@media (max-width: 992px) {
+		flex-direction: column;
+		gap: 30px;
+	}
 }
 
 .stages-card {
 	display: flex;
 	gap: 10px;
-	margin-right: 30px;
 
 	&__circle {
 		display: flex;
@@ -134,9 +167,5 @@
 
 	&__descr {
 		color: var(--grey-color);
-	}
-
-	&:last-child {
-		margin-right: 0;
 	}
 }
